better network status handling, wip

--- a/html/index.html
+++ b/html/index.html
@@ -85,6 +85,7 @@
               shareWindow: $('#share-window'),
               userName: $('#user-name'),
               userAvatar: $('#user-avatar'),
+              networkIcon: $('#mod-cloud'),
               logout: $('#logout')
           })
       })
