highlight section buttons on bottom left according to open window

--- a/html/index.html
+++ b/html/index.html
@@ -239,7 +239,7 @@
         <!-- MAIN MENU-->
         <div id="main-menu">
             <div id="mod-social" class="icon"></div>
-            <div id="mod-plugins" class="icon"></div>
+            <div id="mod-plugins" class="icon selected"></div>
             <div id="mod-pedalboard" class="icon"></div>
             <div id="mod-bank" class="icon"></div>
             <div id="mod-disconnect" class="icon">Disconnect</div>
