proper notification of bluetoot. adjustment in network status notification

--- a/html/index.html
+++ b/html/index.html
@@ -86,6 +86,7 @@
               userName: $('#user-name'),
               userAvatar: $('#user-avatar'),
               networkIcon: $('#mod-cloud'),
+              bluetoothIcon: $('#mod-bluetooth'),
               logout: $('#logout')
           })
       })
@@ -109,6 +110,7 @@
     <script type="text/javascript" src="js/social.js"></script>
     <script type="text/javascript" src="js/hardware.js"></script>
     <script type="text/javascript" src="js/share.js"></script>
+    <script type="text/javascript" src="js/bluetooth.js"></script>
     <script type="text/javascript" src="js/system.js"></script>
     <script type="text/javascript" src="js/xrun.js"></script>
 
