--- a/html/index.html
+++ b/html/index.html
@@ -127,9 +127,11 @@
         </div>
         <!-- END PEDALBOARD-SETTINGS-WINDOW -->
 
+
         <!-- NOTIFICATIONS -->
         <div id="notifications"></div>
         <!-- END NOTIFICATIONS -->
+
 
         <!-- PEDALBOARD -->
         <div id="pedalboard">
@@ -504,6 +506,7 @@
         </div>
         <!-- END BANK LIBRARY -->
 
+
         <!-- MOD SOCIAL NETWORK -->
         <div id="mod-social-network" class="clearfix hidden">
             
@@ -550,8 +553,47 @@
         </div>
         <!-- END MOD SOCIAL NETWORK -->
 
+
     </div>
     <!-- END WRAPPER -->
+
+    <!-- MOD UPDATE/UPGRADE TOOLTIP -->
+    <div class="tooltip hidden" style="opacity:1;right:102px;">
+        <div class="arrow"></div>
+        <div class="text">New updates are available. Click to upgrade.</div>
+    </div>
+    <!-- END MOD UPDATE/UPGRADE TOOLTIP -->
+    
+    <!-- MOD UPDATE/UPGRADE BOX -->
+    <div id="mod-upgrade" class="">
+        <div class="box">
+            <div class="mod-upgrade-packages-list ">
+                <p>The following packages need upgrade:</p>
+                <ul>
+                    <li>Package #1</li>
+                    <li>Package #2</li>
+                    <li>Package #3</li>
+                    <li>Package #4</li>
+                    <li>Package #5</li>
+                    <li>Package #6</li>
+                    <li>Package #7</li>
+                    <li>Package #8</li>
+                    <li>Package #9</li>
+                    <li>Package #10</li>
+                </ul>
+                <p class="textright">
+                    <button class="btn btn-mini btn-info">Upgrade</button>
+                </p>
+            </div>
+            <div class="mod-upgrading textcenter hidden">
+                <p>Start downloading...</p>
+            </div>
+        </div>
+    </div>
+    <!-- END MOD UPDATE/UPGRADE BOX -->
+
+
+
 
 </body>
 </html>
