fix: error notifications in pedalboard screenshot

--- a/html/pedalboard.html
+++ b/html/pedalboard.html
@@ -54,6 +54,7 @@
       {% autoescape None %}
       var TEMPLATES = {}
       SITEURL = '{{cloud_url}}'
+      var NOTIFICATIONS_ENABLED = false
       var HARDWARE_PROFILE = JSON.parse('{{hardware_profile}}')
       var DEFAULT_ICON_TEMPLATE = '{{default_icon_template}}'
       var DEFAULT_SETTINGS_TEMPLATE = '{{default_settings_template}}'
