--- a/html/index.html
+++ b/html/index.html
@@ -433,6 +433,12 @@
                   <span class="list"></span>
                 </div>
                 -->
+		<div id="bank-addressings">
+		  <select></select>
+		  <select></select>
+		  <select></select>
+		  <select></select>
+		</div>
                 <div id="bank-pedalboards" class="grid-selected">
                 </div>
                 <!-- END BANK-PEDALBOARDS -->
