--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
       var MAX_SCREENSHOT_WIDTH = 600
       var MAX_SCREENSHOT_HEIGHT = 600
       var PACKAGE_SERVER_ADDRESS = ('{{package_server_address}}' ||
-                                     document.location.origin.replace(/(https?:\/\/[^/:]+).+/, 
+                                     document.location.origin.replace(/(https?:\/\/[^/:]+).*/,
                                                                       function(m, first) {
                                                                           return first + ':' + {{default_package_server_port}}
                                                                       })
