bank addressings is properly saved and loaded

--- a/html/index.html
+++ b/html/index.html
@@ -433,11 +433,31 @@
                   <span class="list"></span>
                 </div>
                 -->
-		<div id="bank-addressings">
-		  <select></select>
-		  <select></select>
-		  <select></select>
-		  <select></select>
+		<div id="bank-addressings" class="hidden">
+		  <select name="foot-0">
+		    <option value="0">Free</option>
+		    <option value="1">True bypass</option>
+		    <option value="2">Next pedalboard</option>
+		    <option value="3">Previous pedalboard</option>
+		  </select>
+		  <select name="foot-1">
+		    <option value="0">Free</option>
+		    <option value="1">True bypass</option>
+		    <option value="2">Next pedalboard</option>
+		    <option value="3">Previous pedalboard</option>
+		  </select>
+		  <select name="foot-2">
+		    <option value="0">Free</option>
+		    <option value="1">True bypass</option>
+		    <option value="2">Next pedalboard</option>
+		    <option value="3">Previous pedalboard</option>
+		  </select>
+		  <select name="foot-3">
+		    <option value="0">Free</option>
+		    <option value="1">True bypass</option>
+		    <option value="2">Next pedalboard</option>
+		    <option value="3">Previous pedalboard</option>
+		  </select>
 		</div>
                 <div id="bank-pedalboards" class="grid-selected">
                 </div>
