better communication of status during upgrade

--- a/html/index.html
+++ b/html/index.html
@@ -620,7 +620,7 @@
 	      </div>
 	      <div class="download-start">Starting download...</div>
 	      <div class="download-installing">Installing packages... (may take a while)</div>
-	      <div class="installation-checking">Verifying installation...</div>
+	      <div class="installation-checking">Installation complete! Reloading...</div>
 	      <div class="progressbar-wrapper"><div class="progressbar"></div></div>
 	    </div>
         </div>
