layout for registration popup

--- a/html/index.html
+++ b/html/index.html
@@ -179,7 +179,7 @@ $('document').ready(function() {
                 <div class="mod-box">
                     <h1>Login</h1>
                     <!-- The div below will hold error message. It must have class "error" -->
-                    <div class="error"></div>
+                    <div class="error hidden"></div>
                     <form class="bottom">
                         <div class="control-group">
                             <label>MOD ID</label>
@@ -207,7 +207,7 @@ $('document').ready(function() {
                 <div id="registration-form" class="mod-box">
                     <h1>Register</h1>
                     <!-- The div below will hold error message. It must have class "error" -->
-                    <div class="error"></div>
+                    <div class="error hidden"></div>
                     <form class="bottom form-horizontal">
                         <input type="hidden" name="sid" value="by javascript"/>
                         <div class="control-group">
