MOD ID renamed to e-mail

--- a/html/index.html
+++ b/html/index.html
@@ -182,7 +182,7 @@ $('document').ready(function() {
                     <div class="error hidden"></div>
                     <form class="bottom">
                         <div class="control-group">
-                            <label>MOD ID</label>
+                            <label>E-mail</label>
                             <div class="mod-controls">
                                 <input type="text" name="id"/>
                             </div>
