NEW: last search mode is saved and applied when page is reloaded

--- a/html/index.html
+++ b/html/index.html
@@ -353,7 +353,7 @@ $('document').ready(function() {
                         <input type="radio" name="mode" value="all"> All
                     </label>
                     <label class="radio">
-                        <input type="radio" name="mode" value="installed" checked> Installed
+                        <input type="radio" name="mode" value="installed"> Installed
                     </label>
                     <label class="radio">
                         <input type="radio" name="mode" value="not-installed"> Not Installed
