Removing stuff that does not work. Date and time on cloud feed

--- a/html/index.html
+++ b/html/index.html
@@ -409,6 +409,8 @@ $('document').ready(function() {
                     <label>Keywords</label><br/>
                     <input type="search"/>
                 </div>
+		<!-- TODO make this work (branch pedalboard_filter) -->
+		<!--
                 <div class="control-group">
                     <label>Expression Pedal</label>
                     <select>
@@ -457,6 +459,7 @@ $('document').ready(function() {
                         <option>4</option>
                     </select>
                 </div>
+		-->
             </div>
             <div class="pedalboards clearfix js-pedalboards"></div>
         </div>
@@ -531,6 +534,8 @@ $('document').ready(function() {
                             <label>Keywords</label>
                             <input type="search"/>
                         </div>
+			<!-- TODO make this work (branch pedalboard_filter) -->
+			<!--
                         <div class="control-group alignleft">
                             <label>Exp. Pedals</label>
                             <select>
@@ -581,6 +586,7 @@ $('document').ready(function() {
                                 <option>4</option>
                             </select>
                         </div>
+			-->
                     </div>
                 </div>
                 <!-- END FORM-HORIZONTAL -->
@@ -615,20 +621,22 @@ $('document').ready(function() {
         </div>
         <div class="menu clearfix">
             <ul class="clearfix">
+	      <!--
                 <li><a id="cloud-feed" href="#cloud-feed">Feed</a></li>
                 <li><a id="cloud-pedalboards" href="#cloud-pedalboards">Pedalboards</a></li>
-                        <!-- <li><a href="cloud-people.html">People</a></li>
-                        <li class="search">
-                            <form class="form-inline bottom top">
-                                <input type="search" placeholder="Search pedalboard" class="bottom top"/>
-                                <button type="submit" class="bottom top"></button>
-                            </form>
-                        </li> -->
-                        <li class="logout"><a id="logout">Logout</a></li>
-                    </ul>
-                </div>
-            </div>
-            <!-- END HEADER -->
+              <li><a href="cloud-people.html">People</a></li>
+              <li class="search">
+                <form class="form-inline bottom top">
+                  <input type="search" placeholder="Search pedalboard" class="bottom top"/>
+                  <button type="submit" class="bottom top"></button>
+                </form>
+              </li> 
+	      -->
+              <li class="logout"><a id="logout">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- END HEADER -->
 
             <!-- CONTENT -->
             <div class="content-wrapper clearfix">
