--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,8 @@
               return first + ':' + {{default_package_server_port}}
           })
       )
-var PACKAGE_REPOSITORY = '{{package_repository}}'
+      var PACKAGE_REPOSITORY = '{{package_repository}}'
+      var AVATAR_URL = '{{avatar_url}}'
 
 $('<script>').attr('src', PACKAGE_SERVER_ADDRESS+'/js/system.js').appendTo($('head'))
 
