close button in upgrade window

--- a/html/index.html
+++ b/html/index.html
@@ -678,7 +678,8 @@ $('document').ready(function() {
                 <p>The following software updates are available:</p>
                 <ul></ul>
                 <p class="textright">
-                    <button class="btn btn-mini btn-info">Upgrade</button>
+		    <button class="js-close btn btn-mini btn-danger">Cancel</button>
+                    <button class="js-upgrade btn btn-mini btn-info">Upgrade</button>
                 </p>
             </div>
             <div class="download-progress hidden">
