new: load more pedalboards from cloud

--- a/html/index.html
+++ b/html/index.html
@@ -647,7 +647,13 @@ $('document').ready(function() {
                 <div class="container">
                     <div class="row">
                         <!-- MAIN -->
-                        <div id="social-main" class="span9"></div>
+                        <div id="social-main" class="span9">
+			  <div class="box bottom left top row-fluid">
+			    <!-- FEED -->
+			    <ul class="feeds span12">
+			      <li class="more"><button class="hidden">More...</button></li>
+			    </ul>
+			</div>
                         <!-- END MAIN -->
 
                         <!-- ASIDE -->
