re-enabling bank addressing

--- a/html/index.html
+++ b/html/index.html
@@ -495,7 +495,6 @@ $('document').ready(function() {
                   <span class="list"></span>
                 </div>
             -->
-		<!--
             <div id="bank-addressings" class="hidden">
                 <select name="foot-0">
                   <option value="0">Free</option>
@@ -521,10 +520,8 @@ $('document').ready(function() {
                   <option value="2">Next pedalboard</option>
                   <option value="3">Previous pedalboard</option>
               </select>
-	      -->
           </div>
-	  <!-- TODO the style below will be removed when addressings above are uncommented -->
-          <div id="bank-pedalboards" class="grid-selected" style="top: 68px">
+          <div id="bank-pedalboards" class="grid-selected">
           </div>
           <!-- END BANK-PEDALBOARDS -->
 
