new: pedalboard loading message

--- a/html/index.html
+++ b/html/index.html
@@ -110,6 +110,7 @@ $('document').ready(function() {
 
 <script type="text/javascript" src="js/templates.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
+<script type="text/javascript" src="js/wait.js"></script>
 <script type="text/javascript" src="js/file_transfer.js"></script>
 <script type="text/javascript" src="js/window.js"></script>
 <script type="text/javascript" src="js/tags.js"></script>
