bank addressing layout

--- a/html/index.html
+++ b/html/index.html
@@ -497,29 +497,31 @@ $('document').ready(function() {
                 </div>
             -->
             <div id="bank-addressings" class="hidden">
+	      <h2>Bank addressings:</h2>
+	      <small>Select footswitch functionality for this bank. Pedalboard footswitches will be overriden.</small>
                 <select name="foot-0">
                   <option value="0">Free</option>
-                  <option value="1">True bypass</option>
                   <option value="2">Next pedalboard</option>
                   <option value="3">Previous pedalboard</option>
+                  <option value="1">True bypass</option>
               </select>
               <select name="foot-1">
                   <option value="0">Free</option>
-                  <option value="1">True bypass</option>
                   <option value="2">Next pedalboard</option>
                   <option value="3">Previous pedalboard</option>
+                  <option value="1">True bypass</option>
               </select>
               <select name="foot-2">
                   <option value="0">Free</option>
-                  <option value="1">True bypass</option>
                   <option value="2">Next pedalboard</option>
                   <option value="3">Previous pedalboard</option>
+                  <option value="1">True bypass</option>
               </select>
               <select name="foot-3">
                   <option value="0">Free</option>
-                  <option value="1">True bypass</option>
                   <option value="2">Next pedalboard</option>
                   <option value="3">Previous pedalboard</option>
+                  <option value="1">True bypass</option>
               </select>
           </div>
           <div id="bank-pedalboards" class="grid-selected">
