bank auto-saving message

--- a/html/index.html
+++ b/html/index.html
@@ -318,6 +318,7 @@ $('document').ready(function() {
         <div id="mod-plugins" class="icon selected"></div>
         <div id="mod-pedalboard" class="icon"></div>
         <div id="mod-bank" class="icon"></div>
+	<div id="banks-saving">Auto saving banks...</div>
         <div id="mod-disconnect" class="icon">Disconnect</div>
         <div id="mod-settings" class="icon"></div>
         <div id="mod-bluetooth" class="icon"></div>
