the customer communication channel is now optional. desktop users have it turned off by default new: automatic cloud backup, optional, disabled by defaul

--- a/html/index.html
+++ b/html/index.html
@@ -69,6 +69,8 @@
       )
       var PACKAGE_REPOSITORY = '{{package_repository}}'
       var AVATAR_URL = '{{avatar_url}}'
+      var JS_CUSTOM_CHANNEL = {{js_custom_channel}}
+      var AUTO_CLOUD_BACKUP = {{auto_cloud_backup}}
 
 $('<script>').attr('src', PACKAGE_SERVER_ADDRESS+'/js/system.js').appendTo($('head'))
 
