--- a/html/pedalboard.html
+++ b/html/pedalboard.html
@@ -60,6 +60,9 @@
       var DEFAULT_SETTINGS_TEMPLATE = '{{default_settings_template}}'
       var PEDALBOARD_DATA = JSON.parse('{{pedalboard}}')
 
+      var JS_CUSTOM_CHANNEL = false
+      var AUTO_CLOUD_BACKUP = false
+
       $('document').ready(function() {
           var el = $('#pedalboard-dashboard').pedalboard({
              baseScale: 1,
