new: prototype for sound recording and automatic demo video generation

--- a/html/index.html
+++ b/html/index.html
@@ -80,6 +80,7 @@ $('document').ready(function() {
       pedalboard: $('#pedalboard-dashboard'),
       zoomIn: $('.zoom-in'),
       zoomOut: $('.zoom-out'),
+      rec: $('#rec'),
       saveBox: $('#save-pedalboard'),
       saveButton: $('#pedalboard-info .js-save'),
       saveAsButton: $('#pedalboard-info .js-save-as'),
@@ -137,6 +138,7 @@ $('document').ready(function() {
 <body>
 
   <!-- NOTIFICATIONS -->
+  <div id="rec" style="position: absolute; top: 53px; right: 75px; color: white; cursor: pointer; z-index: 10000">REC</div>
   <div id="notifications"></div>
   <!-- END NOTIFICATIONS -->
     <!-- WRAPPER -->
