--- a/html/index.html
+++ b/html/index.html
@@ -262,74 +262,116 @@ $('document').ready(function() {
 
         <!-- PEDALBOARD SHARE WINDOW -->
         <div id="share-window" class="save-popup">
-		 <!-- PEDALBOARD SHARE WINDOW STAGE 1 -->
+		 	<!-- PEDALBOARD SHARE WINDOW STAGE 1 -->
             <div class="box hidden">
                 <h1>SHARE</h1>
-                <input type="text" id="pedalboard-share-title" placeholder="How will you call this pedalboard?"/>
+				<a class="close-window"><i class="icon-black icon-remove"></i></a>
+				<form >
+				<div class="form-group">
+           			<label for="pedalboard-share-title"><input type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
+                	<label for="pedalboard-share-comment"><textarea rows="4"id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
+				</div>
 
-                <textarea id="pedalboard-share-comment" placeholder="What's special about this pedalboard?"></textarea>
-				<button class="js-close btn btn-primary btn-lg">Record a sample</button>
-				<button class="js-close btn btn-default btn-lg">Just share</button>
-				<div id="share-window-fb" class="textright">
-					<a>Share also on Facebook</a>
+                <div class="textcenter">
+					<h2>Record a sample </h2>
+					<span class="btn btn-danger" id="record-rec">&nbsp;&#9654;</span>
+					<p><small>(optional)</small><p>
 				</div>
-            </div>
-		 	<!-- PEDALBOARD SHARE WINDOW STAGE 2 -->
+				<div id="share-window-fb">
+					<label for="pedalboard-share-fb"><input id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
+					<div class="textright">
+						<button style="margin-top: 3px" class="js-close btn btn-default btn-success">Just share</button>
+					</div>
+				</div>
+				</form>
+			</div>	
+			<!-- PEDALBOARD SHARE WINDOW STAGE 2 -->
             <div class="box hidden">
                 <h1>SHARE</h1>
-                <input type="text" id="pedalboard-share-title" placeholder="How will you call this pedalboard?"/>
-                <textarea id="pedalboard-share-comment" placeholder="What's special about this pedalboard?"></textarea>
-				<button class="js-close btn btn-primary active btn-lg">Record a sample</button>
-				<button class="js-close btn btn-default btn-lg">Just share</button>
-                <div class="controls actions">
-					<h2 class="textcenter">Start recording </h2>
-					<span class="btn btn-danger" id="record-rec"></span>
+				<a class="close-window"><i class="icon-black icon-remove"></i></a>
+				<form >
+				<div class="form-group">
+           			<label for="pedalboard-share-title"><input disabled type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
+                	<label for="pedalboard-share-comment"><textarea disabled rows="4"id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
 				</div>
-				<div id="share-window-fb" class="textright">
-					<a>Share also on Facebook</a>
-				</div>	
-			</div>	
+                <div class="controls actions">
+				
+					<h2 class="textcenter">Recording starts in</h2>
+					<span class="btn btn-danger" id="record-rec">3</span>
+				</div>
+				<div id="share-window-fb">
+					<label for="pedalboard-share-fb"><input disabled id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
+					<div class="textright">
+						<button disabled style="margin-top: 3px" class="js-close btn btn-success">Share</button>
+					</div>
+				</div>
+				</form>
+            </div>
 			<!-- PEDALBOARD SHARE WINDOW STAGE 3 -->
             <div class="box hidden">
                 <h1>SHARE</h1>
-                <input disabled type="text" id="pedalboard-share-title" placeholder="How will you call this pedalboard?"/>
-                <textarea disabled id="pedalboard-share-comment" placeholder="What's special about this pedalboard?"></textarea>
-                <div class="controls actions">
-				
-					<h2 class="textcenter">Start recording in</h2>
-					<span class="btn btn-danger" id="record-rec">5</span>
+				<a class="close-window"><i class="icon-black icon-remove"></i></a>
+				<form >
+				<div class="form-group">
+           			<label for="pedalboard-share-title"><input disabled type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
+                	<label for="pedalboard-share-comment"><textarea disabled rows="4"id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
 				</div>
-				<div id="share-window-fb" class="textright">
-					<a>Share also on Facebook</a>
-				</div>
-            </div>
-			<!-- PEDALBOARD SHARE WINDOW STAGE 4 -->
-            <div class="box hidden">
-                <h1>SHARE</h1>
-                <input type="text" disabled id="pedalboard-share-title" placeholder="How will you call this pedalboard?"/>
-                <textarea disabled id="pedalboard-share-comment" placeholder="What's special about this pedalboard?"></textarea>
-                <div class="controls actions ">
-					<h2 class="textcenter">Recording</h2>
+                <div class="textcenter">
+					<h2>Recording</h2>
 					<span class="btn btn-primary" id="record-stop">15</span>
-					<p class="textcenter"><small>(click to stop earlier)</small><p>
+					<p><small>(click the square to stop)</small><p>
 				</div>
-				<div id="share-window-fb" class="textright">
-					<a>Share also on Facebook</a>
+				<div id="share-window-fb">
+					<label for="pedalboard-share-fb"><input disabled id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
+					<div class="textright">
+						<button disabled style="margin-top: 3px" class="js-close btn btn-success">Share</button>
+					</div>
 				</div>
-			</div>
-			<!-- PEDALBOARD SHARE WINDOW STAGE 5 -->		
+				</form>
+			</div>		
+			<!-- PEDALBOARD SHARE WINDOW STAGE 4 -->		
             <div class="box ">
                 <h1>SHARE</h1>
-				<form>
-                <input type="text" id="pedalboard-share-title" placeholder="How will you call this pedalboard?"/>
-                <textarea id="pedalboard-share-comment" placeholder="What's special about this pedalboard?"></textarea>
-				<button class="btn btn-info"><i class="icon-white icon-play"></i> Listen</button>
-				<button class="btn btn-danger"><i class="icon-white icon-repeat"></i> Record Again</button>
-				<button class="btn btn-success">Share</button>	
-				<div id="share-window-fb">
-					<label><input type="checkbox"> <p>Share also on Facebook</p></label>
+				<a class="close-window"><i class="icon-black icon-remove"></i></a>
+				<form >
+				<div class="form-group">
+           			<label for="pedalboard-share-title"><input type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
+                	<label for="pedalboard-share-comment"><textarea rows="4"id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
 				</div>
-			</form>
+				<div class="textcenter">
+					<button class="btn btn-info btn-large btn-block"><i class="icon-white icon-play"></i> Listen</button>
+					<button class="btn btn-danger btn-large btn-block"><i class="icon-white icon-repeat"></i> Record again</button>
+					<button class="btn btn-inverse btn-large btn-block"><i class="icon-white icon-remove"></i> Delete sample </button>
+				</div>
+				<div id="share-window-fb">
+					<label for="pedalboard-share-fb"><input id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
+					<div class="textright">
+						<button style="margin-top: 3px" class="js-close btn btn-success">Share</button>
+					</div>
+				</div>
+				</form>
+            </div>
+			<!-- PEDALBOARD SHARE WINDOW STAGE 5 -->		
+            <div class="box hidden">
+                <h1>SHARE</h1>
+				<a class="close-window"><i class="icon-black icon-remove"></i></a>				
+				<form >
+				<div class="form-group">
+           			<label for="pedalboard-share-title"><input type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
+                	<label for="pedalboard-share-comment"><textarea rows="4"id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
+				</div>
+				<div class="textcenter">
+					<button class="btn btn-info btn-large btn-block active"><i class="icon-white icon-stop"></i> Stop</button>
+					<button disabled class="btn btn-danger btn-large btn-block"><i class="icon-white icon-repeat"></i> Record Again</button>
+					<button disabled class="btn btn-inverse btn-large btn-block"><i class="icon-white icon-remove"></i> Delete sample </button>
+				</div>
+				<div id="share-window-fb">
+					<label for="pedalboard-share-fb"><input id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
+					<div class="textright">
+						<button style="margin-top: 3px" class="js-close btn btn-success">Share</button>
+					</div>
+				</div>
+				</form>
             </div>				
         </div>
         <!-- END PEDALBOARD SHARE WINDOW -->
