--- a/html/index.html
+++ b/html/index.html
@@ -261,117 +261,54 @@ $('document').ready(function() {
         <!-- END REGISTRATION WINDOW -->
 
         <!-- PEDALBOARD SHARE WINDOW -->
-        <div id="share-window" class="save-popup">
+        <div id="share-window" class="save-popup hidden">
 		 	<!-- PEDALBOARD SHARE WINDOW STAGE 1 -->
-            <div class="box hidden">
+            <div class="box">
                 <h1>SHARE</h1>
-				<a class="close-window"><i class="icon-black icon-remove"></i></a>
+				<a class="close-window" id="record-cancel"><i class="icon-black icon-remove"></i></a>
 				<form >
 				<div class="form-group">
            			<label for="pedalboard-share-title"><input type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
                 	<label for="pedalboard-share-comment"><textarea rows="4"id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
 				</div>
 
-                <div class="textcenter">
+				<div class="textcenter" id="record-step-1">
 					<h2>Record a sample </h2>
 					<span class="btn btn-danger" id="record-rec">&nbsp;&#9654;</span>
 					<p><small>(optional)</small><p>
 				</div>
-				<div id="share-window-fb">
-					<label for="pedalboard-share-fb"><input id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
-					<div class="textright">
-						<button style="margin-top: 3px" class="js-close btn btn-default btn-success">Just share</button>
-					</div>
-				</div>
-				</form>
-			</div>	
-			<!-- PEDALBOARD SHARE WINDOW STAGE 2 -->
-            <div class="box hidden">
-                <h1>SHARE</h1>
-				<a class="close-window"><i class="icon-black icon-remove"></i></a>
-				<form >
-				<div class="form-group">
-           			<label for="pedalboard-share-title"><input disabled type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
-                	<label for="pedalboard-share-comment"><textarea disabled rows="4"id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
-				</div>
-                <div class="controls actions">
+				<div class="controls actions hidden" id="record-step-2">
 				
 					<h2 class="textcenter">Recording starts in</h2>
-					<span class="btn btn-danger" id="record-rec">3</span>
+					<span class="btn btn-danger" id="record-countdown">3</span>
 				</div>
-				<div id="share-window-fb">
-					<label for="pedalboard-share-fb"><input disabled id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
-					<div class="textright">
-						<button disabled style="margin-top: 3px" class="js-close btn btn-success">Share</button>
-					</div>
-				</div>
-				</form>
-            </div>
-			<!-- PEDALBOARD SHARE WINDOW STAGE 3 -->
-            <div class="box hidden">
-                <h1>SHARE</h1>
-				<a class="close-window"><i class="icon-black icon-remove"></i></a>
-				<form >
-				<div class="form-group">
-           			<label for="pedalboard-share-title"><input disabled type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
-                	<label for="pedalboard-share-comment"><textarea disabled rows="4"id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
-				</div>
-                <div class="textcenter">
+				<div class="textcenter hidden" id="record-step-3">
 					<h2>Recording</h2>
 					<span class="btn btn-primary" id="record-stop">15</span>
 					<p><small>(click the square to stop)</small><p>
 				</div>
-				<div id="share-window-fb">
-					<label for="pedalboard-share-fb"><input disabled id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
-					<div class="textright">
-						<button disabled style="margin-top: 3px" class="js-close btn btn-success">Share</button>
-					</div>
-				</div>
-				</form>
-			</div>		
-			<!-- PEDALBOARD SHARE WINDOW STAGE 4 -->		
-            <div class="box ">
-                <h1>SHARE</h1>
-				<a class="close-window"><i class="icon-black icon-remove"></i></a>
-				<form >
-				<div class="form-group">
-           			<label for="pedalboard-share-title"><input type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
-                	<label for="pedalboard-share-comment"><textarea rows="4"id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
-				</div>
-				<div class="textcenter">
-					<button class="btn btn-info btn-large btn-block"><i class="icon-white icon-play"></i> Listen</button>
-					<button class="btn btn-danger btn-large btn-block"><i class="icon-white icon-repeat"></i> Record again</button>
-					<button class="btn btn-inverse btn-large btn-block"><i class="icon-white icon-remove"></i> Delete sample </button>
+				<div class="textcenter hidden" id="record-step-4">
+					<button class="btn btn-info btn-large btn-block" id="record-play">
+					  <i class="icon-white icon-play"></i> Listen
+					</button>
+					<button class="btn btn-info btn-large btn-block active" id="record-play-stop">
+					  <i class="icon-white icon-stop"></i> Stop
+					</button>
+					<button class="btn btn-danger btn-large btn-block" id="record-again">
+					  <i class="icon-white icon-repeat"></i> Record again
+					</button>
+					<button class="btn btn-inverse btn-large btn-block" id="record-delete">
+					  <i class="icon-white icon-remove"></i> Delete sample
+					</button>
 				</div>
 				<div id="share-window-fb">
 					<label for="pedalboard-share-fb"><input id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
 					<div class="textright">
-						<button style="margin-top: 3px" class="js-close btn btn-success">Share</button>
+						<button style="margin-top: 3px" class="js-close btn btn-default btn-success" id="record-share">Just share</button>
 					</div>
 				</div>
 				</form>
-            </div>
-			<!-- PEDALBOARD SHARE WINDOW STAGE 5 -->		
-            <div class="box hidden">
-                <h1>SHARE</h1>
-				<a class="close-window"><i class="icon-black icon-remove"></i></a>				
-				<form >
-				<div class="form-group">
-           			<label for="pedalboard-share-title"><input type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
-                	<label for="pedalboard-share-comment"><textarea rows="4"id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
-				</div>
-				<div class="textcenter">
-					<button class="btn btn-info btn-large btn-block active"><i class="icon-white icon-stop"></i> Stop</button>
-					<button disabled class="btn btn-danger btn-large btn-block"><i class="icon-white icon-repeat"></i> Record Again</button>
-					<button disabled class="btn btn-inverse btn-large btn-block"><i class="icon-white icon-remove"></i> Delete sample </button>
-				</div>
-				<div id="share-window-fb">
-					<label for="pedalboard-share-fb"><input id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
-					<div class="textright">
-						<button style="margin-top: 3px" class="js-close btn btn-success">Share</button>
-					</div>
-				</div>
-				</form>
+			</div>	
             </div>				
         </div>
         <!-- END PEDALBOARD SHARE WINDOW -->
