video in pedalboard feed, when available

--- a/html/index.html
+++ b/html/index.html
@@ -291,7 +291,7 @@ $('document').ready(function() {
 						<button class="btn btn-info btn-large btn-block " id="record-play">
 						  <i class="icon-white icon-play"></i> Listen
 						</button>
-						<button class="btn btn-info btn-large btn-block active hidden" id="record-play-stop">
+						<button class="btn btn-info btn-large btn-block active hidden" id="record-play-stop" style="margin-top: 0">
 						  <i class="icon-white icon-stop"></i> Stop
 						</button>
 						<button class="btn btn-danger btn-large btn-block" id="record-again">
