interface to publish in facebook

--- a/html/index.html
+++ b/html/index.html
@@ -304,6 +304,7 @@ $('document').ready(function() {
 				</div>
 				<div id="share-window-fb">
 					<label for="pedalboard-share-fb"><input id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
+					<div id="fb-authorization-container"></div>
 					<div class="textright">
 						<button style="margin-top: 3px" class="js-close btn btn-default btn-success" id="record-share">Just share</button>
 					</div>
