css refactor: pedals.css is not in mod-ui

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/social.css?v={{version}}"/>
 
     <!-- PEDALS -->
-    <link rel="stylesheet" type="text/css" href="resources/pedals/pedals.css?v={{version}}"/>
+    <link rel="stylesheet" type="text/css" href="css/pedals.css?v={{version}}"/>
 
     <!-- DEFAULT -->
     <link rel="stylesheet" type="text/css" href="resources/pedals/default.css?v={{version}}"/>
