new control chain structure implemented in javascript. "hardware" renamed to "addressing"

--- a/html/index.html
+++ b/html/index.html
@@ -128,7 +128,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/register.js?v={{version}}"></script>
 <script type="text/javascript" src="js/feed.js?v={{version}}"></script>
 <script type="text/javascript" src="js/social.js?v={{version}}"></script>
-<script type="text/javascript" src="js/hardware.js?v={{version}}"></script>
+<script type="text/javascript" src="js/addressing.js?v={{version}}"></script>
 <script type="text/javascript" src="js/share.js?v={{version}}"></script>
 <script type="text/javascript" src="js/bluetooth.js?v={{version}}"></script>
 <script type="text/javascript" src="js/upgrade.js?v={{version}}"></script>
